--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
           <button class="btn-order" type="button">Order Service</button>
         </div>
       </section>
-
       <div>
         <ul class="container features-list">
           <li class="feature-title">
             <div class="icon-wrapper">
-              <svg class="feature-icon">
-                <use href="./images/icons.svg#icon-antenna-1" width="64" height="64"></use>
+              <svg class="feature-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
             </div>
             <h3>Strategy</h3>
@@ -74,8 +73,8 @@
           </li>
           <li class="feature-title">
             <div class="icon-wrapper">
-              <svg class="feature-icon">
-                <use href="./images/icons.svg#icon-clock-1" width="64" height="64"></use>
+              <svg class="feature-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
             <h3>Punctuality</h3>
@@ -86,8 +85,8 @@
           </li>
           <li class="feature-title">
             <div class="icon-wrapper">
-              <svg class="feature-icon">
-                <use href="./images/icons.svg#icon-diagram-1" width="64" height="64"></use>
+              <svg class="feature-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
             <h3>Diligence</h3>
@@ -98,8 +97,8 @@
           </li>
           <li class="feature-title">
             <div class="icon-wrapper">
-              <svg class="feature-icon">
-                <use href="./images/icons.svg#icon-astronaut-1" width="64" height="64"></use>
+              <svg class="feature-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
             <h3>Technologies</h3>
@@ -159,24 +158,38 @@
                   <div>
                     <ul class="sm-list">
                       <li class="circle">
-                        <svg>
-                          <use href="./images/icons.svg#icon-instagram-2" width="16" height="16"></use>
-                        </svg>
+                        <a href="#O">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
+                          </svg>
+                        </a>
                       </li>
                       <li class="circle">
-                        <svg>
-                          <use href="./images/icons.svg#icon-twitter-1" width="16" height="16"></use>
-                        </svg>
+                        <a href="#O">
+                          <svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
                       </li>
                       <li class="circle">
-                        <svg>
-                          <use href="./images/icons.svg#icon-facebook-1" width="16" height="16"></use>
-                        </svg>
+                        <a href="#O">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
+                          </svg>
+                        </a>
                       </li>
                       <li class="circle">
-                        <svg>
-                          <use href="./images/icons.svg#icon-linkedin-1" width="16" height="16"></use>
-                        </svg>
+                        <a href="#O">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
+                          </svg>
+                        </a>
                       </li>
                     </ul>
                   </div>
@@ -194,30 +207,44 @@
                 <figcaption>
                   <p class="team-person">Tom Ford</p>
                   <p class="description">Frontend Developer</p>
-                     <div>
-                      <ul class="sm-list">
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-instagram-2" width="16" height="16"></use>
+                  <div>
+                    <ul class="sm-list">
+                      <li class="circle">
+                        <a href="#O">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-twitter-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#O">
+                          <svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-facebook-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-linkedin-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
                           </svg>
-                        </li>
-                      </ul>
-                    </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </figcaption>
               </figure>
             </li>
@@ -232,30 +259,44 @@
                 <figcaption>
                   <p class="team-person">Camila Garcia</p>
                   <p class="description">Marketing</p>
-                   <div>
-                      <ul class="sm-list">
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-instagram-2" width="16" height="16"></use>
+                  <div>
+                    <ul class="sm-list">
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-twitter-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-facebook-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-linkedin-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
                           </svg>
-                        </li>
-                      </ul>
-                    </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </figcaption>
               </figure>
             </li>
@@ -270,30 +311,44 @@
                 <figcaption>
                   <p class="team-person">Daniel Wilson</p>
                   <p class="description">UI Designer</p>
-                     <div>
-                      <ul class="sm-list">
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-instagram-2" width="16" height="16"></use>
+                  <div>
+                    <ul class="sm-list">
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-twitter-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-facebook-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
                           </svg>
-                        </li>
-                        <li class="circle">
-                          <svg>
-                            <use href="./images/icons.svg#icon-linkedin-1" width="16" height="16"></use>
+                        </a>
+                      </li>
+                      <li class="circle">
+                        <a href="#0">
+                          <svg width="16" height="16">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
                           </svg>
-                        </li>
-                      </ul>
-                    </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </figcaption>
               </figure>
             </li>
@@ -305,34 +360,46 @@
           <h2 class="titles">Customers</h2>
           <ul class="customers-list">
             <li class="customers-list-item">
-              <svg class="customers-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-Client-1"></use>
-              </svg>
+              <a href="#0">
+                <svg class="customers-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-Client-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="customers-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-Client-2"></use>
-              </svg>
+              <a href="#0">
+                <svg class="customers-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-Client-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="customers-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-Client-3"></use>
-              </svg> 
+              <a href="#0">
+                <svg class="customers-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-Client-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="customers-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-Client-4"></use>
-              </svg>
+              <a href="#0">
+                <svg class="customers-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-Client-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="customers-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-Client-5"></use>
-              </svg >
+              <a href="#0">
+                <svg class="customers-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-Client-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="customers-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-Client-6"></use>
-              </svg>
+              <a href="#0">
+                <svg class="customers-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-Client-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -343,8 +410,8 @@
         <div class="container footer-wrapper">
           <div class="footer-logo">
             <a class="logo-company-footer" href="#"
-              >WEB<span class="logo-web-darkbg">STUDIO</span></a
-            >
+              >WEB<span class="logo-web-darkbg">STUDIO</span>
+            </a>
             <p class="footer-text">
               Increase the flow of customers and sales for your business with
               digital marketing & growth solutions.
@@ -354,28 +421,38 @@
             <h4 class="sm-footer-title">Social media</h4>
             <ul class="sm-footer-list">
               <li class="circle">
-                <svg>
-                  <use href="./images/icons.svg#icon-instagram-2" width="16" height="16"></use>
-                </svg>
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="circle">
-                <svg>
-                  <use href="./images/icons.svg#icon-twitter-1" width="16" height="16"></use>
-                </svg>
-             </li>
-             <li class="circle">
-               <svg>
-                 <use href="./images/icons.svg#icon-facebook-1" width="16" height="16"></use>
-               </svg>
-             </li>
-             <li class="circle">
-               <svg>
-                 <use href="./images/icons.svg#icon-linkedin-1" width="16" height="16"></use>
-               </svg>
-             </li>
-           </ul>
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="circle">
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="circle">
+                <a href="#0">
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
