--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,7 @@
                 height="300"
               />
               <figcaption>
-                <h4 class="project">
-                  Banking App Interface Concept
-                </h4>
+                <h4 class="project">Banking App Interface Concept</h4>
                 <p class="project-section">App</p>
               </figcaption>
             </figure>
@@ -211,26 +209,35 @@
             <h4 class="sm-footer-title">Social media</h4>
             <ul class="sm-footer-list">
               <li class="circle">
-                <svg>
-                  <use href="./images/icons.svg#icon-instagram-2" width="16" height="16"></use>
-                </svg>
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="circle">
-                <svg>
-                  <use href="./images/icons.svg#icon-twitter-1" width="16" height="16"></use>
-                </svg>
-             </li>
-             <li class="circle">
-               <svg>
-                 <use href="./images/icons.svg#icon-facebook-1" width="16" height="16"></use>
-               </svg>
-             </li>
-             <li class="circle">
-               <svg>
-                 <use href="./images/icons.svg#icon-linkedin-1" width="16" height="16"></use>
-               </svg>
-             </li>
-           </ul>
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="circle">
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="circle">
+                <a href="#0">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
