--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="modal-body">
             <button type="button" class="modal-close-btn" data-modal-close="">
               <svg class="close-icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close-button"></use>
+                <use href="./images/icons2.svg#icon-close-button"></use>
               </svg>
             </button>
           </div>
